Added Event and File APIs
